# eml1_at2

./: .bumpversion.cfg  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  README.md  bumpversion.cfg  dockerfile  main.dockerfile  makefile  pyproject.toml
src/: main.py
src/data/: preprocess.py
src/models/: evaluator.py  factory.py  predict.py  trainer.py
src/utils/: mlflow_utils.py
tests/: test_evaluate.py  test_preprocess.py  test_train.py
