[tool.poetry]
name = "src"
version = "0.5.0"
description = "Criar um modelo de ML"
authors = ["Jefferson <jeffersondemoraiscorreia@gmail.com>"]
license = "License"
readme = "README.md"


[tool.poetry.dependencies]
python = "^3.9"
pandas = "^2.2.3"
scikit-learn = "^1.6.1"
numpy = "^2.2.3"
matplotlib = "^3.10.0"
seaborn = "^0.13.2"
mlflow = "^2.20.3"
kagglehub = "^0.3.10"
kaggle = "^1.6.17"



[tool.poetry.group.dev.dependencies]
bump2version = "^1.0.1"
black = "^25.1.0"

[tool.bumpversion]
current_version = "0.5.0"
commit = true
tag = true

[[tool.bumpversion.files]]
filename = "pyproject.toml"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
